--- a/DIYscripts/ejb_from_scratch.adoc
+++ b/DIYscripts/ejb_from_scratch.adoc
@@ -17,11 +17,13 @@ New Maven Project
 Open project in Eclipse. Close other projects.
 
 Five steps needed:
-	1) Add EJB, H2, JUnit support in pom
-	2) Persistence.xml
+	1) In pom, Add EJB, JUnit, optional H2, support 
+	2) Persistence.xml (not needed for helloworld app)
 	3) Create an EJB
-	4) Add EE Server support in pom
-	5) Create a driver "main"?
+	4) Add App Server support in pom
+	5) Fixup Maven Properties
+	6) Deploy
+	7) Optional: Create a driver "main"
 
 1) Right click on Project. Maven->Add Dependency.
 	Group: javax, Artifact javaee-web-api, Vers 8.0, Scope provided, OK
@@ -33,50 +35,63 @@ Five steps needed:
 	Copy persistence.xml from jpademo into new project
 	Make sure it goes in src/main/resources/META-INF/persistence.xml
 	Open it.
-	Change the persistence unit name to "samplemavenejb"
-	In the H2 URL config, change the db name from jpademo to "samplemavenejb".
-	DELETE the 2 lines and 1 comment around "import.sql"
-		or create a dummy
-		or be really brave and create a real import.sql on the fly.
-			You don't know your entity fields until you do your Entity in 4.
-			Don't use an id of 1.
+		Change the persistence unit name to "samplemavenejb"
+		In the H2 config, change db name from "jpademo" to "samplemavenejb".
+		DELETE the 2 lines and 1 comment around "import.sql"
+			or create a dummy
+			or be really brave and create a real import.sql on the fly.
+				You don't know your entity fields until you do your Entity in 4.
+				Don't use an id of 1.
 
 3) Create an EJB
 	New->Class. Call it SampleEJB.
 	Annotate with @Stateless
-	Add greeting(String name) to return "Hello " + name or something
+	Add sayHello(String name) to return "Hello " + name or something
 
-4) Add plugin.
+4) Add App Server plugin.
 	Right click on project. Maven->Add PlugIn (not Dependency).
 	Add: org.wildfly.plugins:wildfly-maven-plugin:1.2.1.Final
 
-4B) Fixup Maven
+5) Fixup Maven Properties
 	For some reason Maven still defaults to Java SE 1.5.
-	Open the pom file from any of the exercises. Copy the entire 
-	<properties> section. Paste it into this project's pom file,
-	before the <dependencies>
+	Open the pom file. Copy this entire (and fairly canonical) 
+	<properties> section, and paste it into the pom file, before 
+	the <dependencies> section.
 
-5) Try to deploy
+	<properties>
+		<project.build.sourceEncoding>UTF-8
+			</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8
+			</project.reporting.outputEncoding>
+		<javase.version>1.8</javase.version> <!-- OR 11 ? -->
+		<maven.compiler.source>${javase.version}</maven.compiler.source>
+		<maven.compiler.target>${javase.version}</maven.compiler.target>
+		<maven.compiler.testSource>${javase.version}</maven.compiler.testSource>
+		<maven.compiler.testTarget>${javase.version}</maven.compiler.testTarget>
+		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+	</properties>
+
+6) Deploy
 	Run Maven (in Eclipse Run As or in terminal window)
 		wildfly:deploy
 	Should work with no errors.
 
-5) Driver program.
+	Show console output w/ BUILD SUCCESS, then switch to terminal
+	window from Wildfly and show EJB JNDI/RMI lookups.
+	Select and copy one of these.
+
+7) RMI Driver program (Optional - extra time).
+	Back in the EJB:
+		Extract interface; add @Remote; add "throws Remote" to method
 	New->Class. Demo. Check "main" box.
 	In main:
-		create entitymanagerfactory("demo")
-		create entitymanager
-		Coffee coffee = new Coffee();
-		assign fields...
-		getTransaction
-		begin
-		em.persist(coffee);
-		tx.commit
-		get id from coffee object
-		print id and toString.
+		create InitialContext
+		Lookup EJB JNDI name
+		Greeting greeting = (Greeting) lookedUp;
+		String ret = greeting.sayHello("MYNAME");
+		sysout<CTRL/SPACE) ret
 
-Now you're done? Try running it. I got it to run on my 3rd try
-but I had missed two steps that are now included in this script.
+That's all I hope! Try running it.
 
 As they say with all demos: Good luck!
 
